--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716423.md#1" target="_blank">周晓辉：北京高层安排后路 中国人怎么办？</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-179-1-150x120.jpg" align ="left"></a>如果中共被上天销毁，那些追随中共并发誓要将生命献给它的党团员，能逃脱厄运吗？再换美元、屯粮也没有用的啊。唯一的办法就是抹去毒誓，退出中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:44 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716683.md#1" target="_blank">王友群：台湾2020年总统大选结果会怎样</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716683.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/maxresdefault-600x400-1-150x120.jpg" align ="left"></a>2020年1月11日，是台湾总统大选日。
+
+这是中华民国第7次正、副总统公民直选，采用普通、直接、平等、无记名、单记、相对多数投票制度。
+
+现在，距离大选日还有1个月。民进党候选人是现任总统蔡英文，国民党候选人是高雄市长韩国瑜，亲民党候选人是党主席宋楚瑜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716611.md#1" target="_blank">何清涟：掌门大方“容错” 官商“戴罪立功”</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716611.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/f6794ca9d96477d94cf96b4dae7e5ede-150x120.jpg" align ="left"></a>长达19个月的中美贸易战，导致全球产业链重置，加剧了中国经济困境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716547.md#1" target="_blank">谭笑飞：中共急于达成贸易协议吗？</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716547.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1J50IR-600x400-150x120.jpg" align ="left"></a>12月2日，美国商务部长罗斯称川普已经明确表示，如果12月15日前中美贸易谈判没有进展，将如期加税。12月6日，中共官方公布正在考虑豁免部分美国进口大豆和猪肉的报复性关税。12月9日，中共商务部高级官员表示愿意推进谈判和磋商，尽快取得满意的结果。这些迹象似乎显示中共慑于高关税的压力，急于与美国达成贸易协议。笔者倾向于认.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711700.md#1" target="_blank">大成漫画：求党活摘前列腺</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711700.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/174bd05b602f06be4205e77bb7840c18-150x120.jpg" align ="left"></a>中共阅兵有亮点，
@@ -25,8 +31,6 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712533.md#1" target="_blank">洪微：中共的“初级阶段”也走到头了</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712533.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/67-4-150x120.jpg" align ="left"></a>文革之后，邓小平重新掌权，中共的社会主义道路，已经走不下去了，再瞎折腾，中共就是死路一条。不得已，邓小平只能改革开放，对内允许私营经济，对外拥抱西方资本主义，但这样的做法，实质等于否定了中共灌输的社会主义理论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712465.md#1" target="_blank">严晓：从何君尧册封博士说起</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190722052739100484-150x120.jpg" align ="left"></a>赤膊上阵喊出对民主派“杀无赦”的何君尧得到大陆政法大学授予的荣誉博士学位，他为此欢欣鼓舞，还得意道：“内地人比香港人可爱多了，我在Facebook 经营多年才只有十五万粉丝，在内地网站刚一注册就有一百万粉丝。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712285.md#1" target="_blank">王友群：邓炳强新官上任 未来结局如何？</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/zEogqcK-1-800x450@1200x1200-600x400-1-1-150x120.jpg" align ="left"></a>近日，香港警务处新任处长邓炳强到北京，拜访了中共公安部长赵克志、中央政法委书记郭声琨等。据邓炳强讲，中共对香港警方工作给予肯定，表示将“全力支持”他继续“止暴制乱”；他也一再表决心将全力以赴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:42 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711506.md#1" target="_blank">杜彼得：愁因风雪起 隐者自怡悦</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-11-150x120.jpg" align ="left"></a>每次在脸书看到年轻一代华人，放上婴儿或正在成长幼儿的相片，我们都会仔细的观赏数回，手会情不自禁去点赞，“性之所至”还会回二句留言，给做父母的人打气。或许有人会说，喂！你是不是很无聊，可是你若从我们一直重视群体荣耀与否的角度去看，肯定会了解，“传承”对一个族裔的重要性，尤其是我们身处在美国这个大染缸的社会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:12 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711479.md#1" target="_blank">周晓辉：当北大到了高调炫耀金钱时</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711479.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2-127-150x120.jpg" align ="left"></a>大学的职责是为养育自己的社会服务，其根本目的不是为了赚钱，不是为了成为公司，不是去当国家安全的工具。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/6/n11706333.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（8）</a><br></h3>亚氏逻辑学概念获取的基本要求是含义明确，不含混，唯一确定。以其为基础的近代科学更是立足于精确定义的概念，多数概念利用属种差方法来定义。这种概念与近代科学的认识论基础相一致的是，虽然在含义的精确性上有着优势，但是往往缺乏表达能力，会造成近代科学中的复杂性和非线性问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716489.md#1" target="_blank">项云：对女性禽兽不如恶魔行径戳穿中共画皮</a><br></h3>有中共起，它就响当当叫喊男女平等，批判“旧社会”欺压妇女，新社会妇女“翻身得解放”，“妇女能顶半边天”等等，似乎很尊重妇女。可是，迫害法轮功二十余年，爆料出冰山一角对女性法轮功学员的迫害，恶魔禽兽不如案例比比皆是遍及中国所有角落：毒打、酷刑、电击、针刺、剥光衣服冷冻、浇冷水、不许睡觉，强奸、轮奸；烫烙、击打和电击生理器.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715313.md#1" target="_blank">廖祖笙：习近平快意于虐待老人和儿童？</a><br></h3>习近平先生，你说要全面建成小康社会，说要坚决打赢脱贫攻坚战……类似的表述可谓百转千回、余音绕梁，而你治下的现实，却是一次次这般耳光响亮。匪区庶民普遍是一种怎样惨淡的活法，在此姑置不论，单是我家，为了一个吃饭的问题，这回就已是第二轮向你苦苦申诉了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:22 PM			</td></tr>
